examples/test/testpolicy16747.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16747
  namespace: namespace155
spec:
  podSelector:
    matchLabels:
      key19: value11
      key15: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value30
          key16: value48
          key3: value17
      podSelector:
        matchLabels:
          key49: value9
          key31: value49
